--- a/src/main/resources/templates/endangered-form.hbs
+++ b/src/main/resources/templates/endangered-form.hbs
@@ -11,13 +11,13 @@
                     {{/each}}
                 </select>
                 <label for="age">Age?</label>
-                <select id="age">
+                <select class="form-control" id="age">
                     <option name="age">Old</option>
                     <option name="age">Young</option>
                     <option name="age">NewBorn</option>
                 </select>
                 <label for="health">Health</label>
-                <select id="health">
+                <select class="form-control" id="health">
                     <option name="health">Ill</option>
                     <option name="health">Okay</option>
                     <option name="health">Good</option>
