--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -16,10 +16,12 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/endangered/new">Endangered animal seem!</a>
-
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="/sightings/all">View sightings</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/endangered/all">View endangered</a>
                 </li>
             </ul>
         </div>
