--- a/src/main/resources/templates/sighting-form.hbs
+++ b/src/main/resources/templates/sighting-form.hbs
@@ -10,7 +10,8 @@
                 <option value="Zone 2" >Zone 2</option>
                 <option value="Zone 3" >Zone 3</option>
             </select>
-
+             <label for="animal">Animal name</label>
+            <input type="text" class="form-control" name="animal_name" id="animal_name">
             <button type="submit" class="btn btn-danger">Submit!</button>
         </div>
     </form>
