--- a/src/main/resources/templates/endangered-form.hbs
+++ b/src/main/resources/templates/endangered-form.hbs
@@ -1,30 +1,38 @@
 {{#partial "content"}}
 
-        <form method="post" action="/endangered">
-            <div class="form-group">
-                <label for="name"> What was the animals name</label>
-                <input class="form-control" type="text" name="animal_name" id="animal_name">
-                <label for="location"> Where was seen at!</label>
-                <select id="id" name="id" class="form-control">
-                    {{#each sightings}}
-                        <option name="sighting_id" value={{location}}> {{location}}  </option>
-                    {{/each}}
-                </select>
-                <label for="age">Age?</label>
-                <select class="form-control" id="age">
-                    <option name="age">Old</option>
-                    <option name="age">Young</option>
-                    <option name="age">NewBorn</option>
-                </select>
-                <label for="health">Health</label>
-                <select class="form-control" id="health">
-                    <option name="health">Ill</option>
-                    <option name="health">Okay</option>
-                    <option name="health">Good</option>
-                </select>
-                <button type="submit" class="btn btn-danger">Submit!</button>
-            </div>
-        </form>
+    <form  action="/endangered" method="post">
+        <div class="form-group">
+            <label for="name">Ranger Name</label>
+            <input class="form-control" placeholder="enter name" name="ranger_name" id="ranger_name">
+<!--            <label for="location">Location</label>-->
+<!--            <select name="location" id="location" class="form-control">-->
+<!--                <option value="Zone 1" >Zone 1</option>-->
+<!--                <option value="Zone 2" >Zone 2</option>-->
+<!--                <option value="Zone 3" >Zone 3</option>-->
+<!--            </select>-->
+            <label for="animal">Animal name</label>
+            <input type="text" class="form-control" name="animal_name" id="animal_name">
+            <label for="location">Health</label>
+            <select name="animal_health" id="location" class="form-control">
+                <option value="Ill" >Ill</option>
+                <option value="Okay" >Okay</option>
+                <option value="Good" >Good</option>
+            </select>
+            <label for="location">Age</label>
+            <select name="animal_age" id="location" class="form-control">
+                <option value="Young" >Young</option>
+                <option value="New Born" >New Born</option>
+                <option value="Old">Old</option>
+            </select>
+            <label for="Location">Location</label>
+            <select name="location" id="location" class="form-control">
+                <option value="Zone 1" >Zone 1</option>
+                <option value="Zone 2" >Zone 2</option>
+                <option value="Zone 3" >Zone 3</option>
+            </select>
+            <button type="submit" class="btn btn-danger">Submit!</button>
+        </div>
+    </form>
 
 {{/partial}}
 {{>layout.hbs}}
