--- a/src/main/resources/templates/endangered.hbs
+++ b/src/main/resources/templates/endangered.hbs
@@ -1,19 +1,18 @@
 {{#partial "content"}}
     <div class="row">
         <div class="card-group">
-
             {{#if endangeredAnimals1}}
                 {{#each endangeredAnimals1 }}
                     <div class="col-md-4">
                         <div class="card">
                             <img src="/images/default.gif" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">{{ranger_name}}</h5>
-                                <p class="card-text">{{location}}</p>
-                                <p class="card-text"> {{animal_name}} </p>
-                                <p class="card-text"> {{animal_age}} </p>
-                                <p class="card-text"> {{animal_health}} </p>
-                                <p class="card-text"><small class="text-muted">Last updated a min ago</small></p>
+                                <h5 class="card-title">Spotted by: {{ranger_name}}</h5>
+                                <p class="card-text">Spotted at: {{location}}</p>
+                                <p class="card-text">Name: {{animal_name}} </p>
+                                <p class="card-text">Age: {{animal_age}} </p>
+                                <p class="card-text">Health: {{animal_health}} </p>
+                                <p class="card-text"><small class="text-muted">Details of the sighting</small></p>
                             </div>
                         </div>
                     </div>
