--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -15,7 +15,7 @@
                     <a class="nav-link" href="/sightings/new">Animal seen <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/endangered/new">Endangered animal seem!</a>
+                    <a class="nav-link" href="/endangered/new">Endangered animal seen!</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="/sightings/all">View sightings</a>
