Enhanced sighting details

--- a/src/main/resources/templates/sightings.hbs
+++ b/src/main/resources/templates/sightings.hbs
@@ -8,9 +8,9 @@
                   <div class="card">
                       <img src="/images/default.gif" class="card-img-top" alt="...">
                       <div class="card-body">
-                          <h5 class="card-title">{{ranger_name}}</h5>
-                          <p class="card-text">{{location}}</p>
-                          <p class="card-text"> {{animal_name}} </p>
+                          <h5 class="card-title">Spotted by: {{ranger_name}}</h5>
+                          <p class="card-text">Spotted at: {{location}}</p>
+                          <p class="card-text">Name: {{animal_name}} </p>
                           <p class="card-text"><small class="text-muted">Last updated a min ago</small></p>
                       </div>
                   </div>
