--- a/src/main/resources/templates/endangered-form.hbs
+++ b/src/main/resources/templates/endangered-form.hbs
@@ -1,7 +1,7 @@
 {{#partial "content"}}
 
     <form  action="/endangered" method="post">
-        <div class="form-group">
+        <div class="form-group main-w3layouts wrapper">
             <label for="name">Ranger Name</label>
             <input class="form-control" placeholder="enter name" name="ranger_name" id="ranger_name">
 <!--            <label for="location">Location</label>-->
