--- a/src/main/resources/templates/sightings.hbs
+++ b/src/main/resources/templates/sightings.hbs
@@ -4,9 +4,9 @@
 
               {{#if sightings}}
                   {{#each sightings }}
-                    <div class="col-md-4">
+                    <div class="">
                   <div class="card">
-                      <img src="/images/default.gif" class="card-img-top" alt="...">
+                      <img src="/images/animal.gif" class="card-img-top" alt="...">
                       <div class="card-body">
                           <h5 class="card-title">Spotted by: {{ranger_name}}</h5>
                           <p class="card-text">Spotted at: {{location}}</p>
