--- a/src/main/resources/templates/endangered.hbs
+++ b/src/main/resources/templates/endangered.hbs
@@ -5,7 +5,7 @@
                 {{#each endangeredAnimals1 }}
                     <div class="col-md-4">
                         <div class="card">
-                            <img src="/images/default.gif" class="card-img-top" alt="...">
+                            <img src="/images/new.gif" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Spotted by: {{ranger_name}}</h5>
                                 <p class="card-text">Spotted at: {{location}}</p>
@@ -19,7 +19,6 @@
                 {{/each}}
             {{/if}}
         </div>
-    </div>
     </div>
 {{/partial}}
 {{>layout.hbs}}
