--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -27,7 +27,10 @@
         </div>
     </nav>
 </head>
-<body>
+<body bgcolor="#b300b3">
+<video autoplay muted loop id="myVideo">
+    <source type="video/mp4" src="/images/rain.mp4">
+</video>
 <div class="container">
     {{#block "content"}}{{/block}}
 </div>
